<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".presentation.ChapterActivity">

    <Button
        android:id="@+id/btnToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/toggle_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilChapterName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:hint="@string/enter_chapter_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnToggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etChapterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:paddingStart="18dp"
            android:paddingEnd="18dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDevelopers"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:hint="@string/enter_developers_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilChapterName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDevelopers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:paddingStart="18dp"
            android:paddingEnd="18dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSubChapters"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:hint="@string/enter_sub_chapters_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilDevelopers">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSubChapters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:paddingStart="18dp"
            android:paddingEnd="18dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnUpdateChapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/update_chapter"
        app:layout_constraintStart_toStartOf="@id/tilSubChapters"
        app:layout_constraintTop_toBottomOf="@id/tilSubChapters" />

    <Button
        android:id="@+id/btnUpdateDevelopers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/update_developers"
        app:layout_constraintEnd_toEndOf="@id/tilSubChapters"
        app:layout_constraintTop_toBottomOf="@id/tilSubChapters" />

    <TextView
        android:id="@+id/tvChapterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnUpdateChapter" />

    <TextView
        android:id="@+id/tvDevelopers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvChapterName" />

    <TextView
        android:id="@+id/tvSubChapters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDevelopers" />


</androidx.constraintlayout.widget.ConstraintLayout>